[gd_scene load_steps=10 format=3 uid="uid://bebcs2jivdy82"]

[ext_resource type="Script" path="res://temp/npc.gd" id="1_k8hye"]
[ext_resource type="Texture2D" uid="uid://driexkj0o1kts" path="res://temp/NPC.png" id="2_o5rek"]
[ext_resource type="FontFile" uid="uid://cv44u08rsmf26" path="res://temp/Aleo-Black.ttf" id="3_qkdx5"]
[ext_resource type="Texture2D" uid="uid://cjd24kt8iifgi" path="res://temp/X.png" id="4_1pjxy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryv6h"]
size = Vector2(70, 70)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b1c87"]
bg_color = Color(0, 0, 0, 0.290196)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ysyy3"]
bg_color = Color(0.486275, 0.768627, 0.541176, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yjtkx"]
bg_color = Color(0, 0, 0, 0.290196)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l2a8i"]
bg_color = Color(0.486275, 0.607843, 0.768627, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="NPC" type="Area2D"]
position = Vector2(463, 525)
script = ExtResource("1_k8hye")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_o5rek")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ryv6h")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Attributes" type="Control" parent="GUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="GUI/Attributes"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -94.0
offset_right = 35.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_b1c87")
theme_override_styles/fill = SubResource("StyleBoxFlat_ysyy3")
max_value = 24.0
step = 1.0
value = 24.0
show_percentage = false

[node name="HealthLbl" type="Label" parent="GUI/Attributes/HealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -11.5
offset_right = 21.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_qkdx5")
theme_override_font_sizes/font_size = 8
text = "24/24"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ArmorBar" type="ProgressBar" parent="GUI/Attributes"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -84.0
offset_right = 35.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_yjtkx")
theme_override_styles/fill = SubResource("StyleBoxFlat_l2a8i")
max_value = 1.0
step = 1.0
show_percentage = false

[node name="ArmorLbl" type="Label" parent="GUI/Attributes/ArmorBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -11.0
offset_right = 21.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_qkdx5")
theme_override_font_sizes/font_size = 8
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathIcon" type="TextureRect" parent="GUI/Attributes"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_1pjxy")

[node name="Highlighter" type="ReferenceRect" parent="GUI"]
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(1, 1, 1, 1)
border_width = 3.0
editor_only = false
